# SI_Mandatory_1

1._exercise/: csv_read.js  package.json  pyproject.toml  text_read.js  text_read.py  yaml_read.js
2_exercise/: dog.json  package-lock.json  package.json  pyproject.toml  server.js  server.py
3_exercise/: package-lock.json  package.json  pyproject.toml  server.js  server.py  time.js
4_exercise/: package-lock.json  package.json  pyproject.toml  server.js  server.py  time.js
